--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
 
 <html lang="en">
 <head>
-    <title>Ahi Poke Bowl | Rewards</title>
+    <title>Ahi Poke Bowl | Menu</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="description" content="">
@@ -45,7 +45,7 @@
 
 <main>
 
-    <h1>REWARDS</h1>
+    <h1>MENU</h1>
 
     <div class="container">
         <div class="homeheaderblock">
