--- a/index.html
+++ b/index.html
@@ -1,107 +1,124 @@
+<?php
+    include('includes/arrays.php');
+?>
+
 <!doctype html>
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-
-  <title>Ahi Poke Bowl</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <title>Ahi Poke Bowl | Home</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+<header>
+<!--
+    <?php include('includes/nav.php'); ?>
+    -->
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+    <div class="container nav">
+    <div class="nav-bar">
+        <div class="logo">
+            <a class="" href="index.php" title="Home"><img src="images/apb-logo.svg" height="120px"></a>
+        </div>
+        <div class="contact">
+            <h4><a href="tel:817-200-6418">(817) 200-6418</a></h4>
+            <p><a href="https://goo.gl/maps/1Jsr7fxhxkqSenWe9"><img src="images/maps-icon.svg" height="12px"> 3701 S Cooper Street, #169</a></p>
+        </div>
     </div>
-  </nav>
+
+    <div class="nav-menu"
+        <div class="multiblock">
+          <a class="nav-items" href="index.html">HOME</a>
+          <a class="nav-items" href="menu.html">MENU</a>
+          <a class="nav-items" href="rewards.html">REWARDS</a>
+          <a class="nav-items" href="news.html">NEWS</a>
+        </div>
+    </div>
+</div>
+</header>
+
+<main>
+
+    <h1>HIGH QUALITY POKE BOWLS</h1>
+
+    <div class="container">
+        <div class="homeheaderblock">
+            <div class="multiblock">
+                <div class="button"><a href="index.php">MENU</a></div>
+            </div>
+            <div class="multiblock">
+                <div class="button"><a href="index.php">ORDER</a></div>
+            </div>
+        </div>
+    </div>
 
 
-  <header>
-    <!-- will do php -->
-  </header>
+    <h2>FRESH C.A.T.C.H.</h2>
 
-  <div class="container">
+    <div class="container">
+        <div class="col-sm-12 col-md-12 col-lg-12 singleblock">
+            <h5>Colorful, Affordable, Tasty, Customizable, Healthy</h5>
+        </div>
+    </div>
 
-  </div>
+    <div class="container">
+        <div class="homerewardsblock">
+            <div class="singleblock">
+                <h4>For every 15 bowls, get one FREE!</h4>
+            </div>
+            <div class="singleblock">
+                <div class="button"><a href="rewards.php">REWARDS</a></div>
+            </div>
+        </div>
+    </div>
 
-  <h1>2 Column to 1 Column Responsive Example</h1>
-  <div class="container">
-    <div class="row">
+
+    <div class="container">
+    <div class="wrap">
 
 
 
-      <div class="col-sm-12 col-md-6 col-lg-6">
-        <h3>box 01</h3>
+      <div class="multiblock col-sm-12 col-md-6 col-lg-6">
+        <h2><a href="index.php">box 2</a></h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
 
-      <div class="col-sm-12 col-md-6 col-lg-6">
-        <h3>box 02</h3>
+      <div class="multiblock col-sm-12 col-md-6 col-lg-6">
+        <h2>box 03</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
 
-      <div class="col-sm-12 col-md-6 col-lg-6">
-        <h3>box 03</h3>
+      <div class="multiblock col-sm-12 col-md-6 col-lg-4">
+        <h2>box 04</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
 
-      <div class="col-sm-12 col-md-6 col-lg-6">
-        <h3>box 04</h3>
+      <div class="multiblock col-sm-12 col-md-6 col-lg-4">
+        <h2>box 05</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
 
-      <div class="col-sm-12 col-md-6 col-lg-6">
-        <h3>box 05</h3>
-      </div>
-
-      <div class="col-sm-12 col-md-6 col-lg-6">
-        <h3>box 06</h3>
+      <div class="multiblock col-sm-12 col-md-12 col-lg-4">
+        <h2>box 06</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
 
     </div>
-  </div>
+</div>
 
 
+</main>
 
-  <footer>
-    <!-- will do php -->
-  </footer>
+<?php include('includes/footer.php'); ?>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="js/basic.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="js/basic.js"></script>
 
 </body>
 </html>
