--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
             <h5>Colorful, Affordable, Tasty, Customizable, Healthy</h5>
         </div>
     </div>
-
     <div class="container">
         <div class="homerewardsblock">
             <div class="singleblock">
@@ -78,37 +77,25 @@
         </div>
     </div>
 
+    <h2>ABOUT US</h2>
 
     <div class="container">
     <div class="wrap">
 
 
-
       <div class="multiblock col-sm-12 col-md-6 col-lg-6">
-        <h2><a href="index.php">box 2</a></h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <img class="owner-photo" src="images/owner1.jpg">
       </div>
 
       <div class="multiblock col-sm-12 col-md-6 col-lg-6">
-        <h2>box 03</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <img class="owner-photo" src="images/owner2.jpg">
       </div>
-
-      <div class="multiblock col-sm-12 col-md-6 col-lg-4">
-        <h2>box 04</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="aboutp">
+        <p>
+        Owners, Chef Khang V. and his business partner Ronnie L. grew up together in Hawaii and    are very familiar with how tasty and popular poke is.
+        <br><br>We are proud to be the first in Texas to bring you the  popular Hawaiian poke bowl dish using the freshest and highest quality of sustainable ingredients!
+        </p>
       </div>
-
-      <div class="multiblock col-sm-12 col-md-6 col-lg-4">
-        <h2>box 05</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-
-      <div class="multiblock col-sm-12 col-md-12 col-lg-4">
-        <h2>box 06</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-
     </div>
 </div>
 
