--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
         </p>
       </div>
     </div>
+    <div class="storefront">
+      <img class="store" src="images/store.jpg">
+    </div>
 </div>
 
 
