--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@
       <img class="store" src="images/store.jpg">
     </div>
 </div>
-
+<br>
+<h2>AN ARLINGTON FAVORITE</h2>
 <!-- -----------------------Carousel--------------------------- -->
-<div class="slideshow-container">
+<div class="slideshow-container" style="width:90%;">
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
@@ -113,12 +114,12 @@
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
-    <img src="images/ss2.jpg" style="width:90%">
+    <img src="images/ss2.jpg" style="width:90%; padding-left: 30px;">
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 3</div>
-    <img src="images/ss3.jpg" style="width:90%">
+    <img src="images/ss3.jpg" style="width:90%; padding-left: 30px;">
   </div>
 
   <!-- Next and previous buttons -->
@@ -145,3 +146,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="js/carousel.js"></script>
+
+<footer>
+  
+</footer>
