--- a/rewards.html
+++ b/rewards.html
@@ -47,70 +47,9 @@
 
     <h1>REWARDS</h1>
 
-    <div class="container">
-        <div class="homeheaderblock">
-            <div class="multiblock">
-                <div class="button"><a href="index.php">MENU</a></div>
-            </div>
-            <div class="multiblock">
-                <div class="button"><a href="index.php">ORDER</a></div>
-            </div>
-        </div>
-    </div>
+    <h5>Make every meal count with our free rewards program.<br> After 15 bowls, get a bowl on us! Fill out the form below to get started.</h5>
 
 
-    <h2>FRESH C.A.T.C.H.</h2>
-
-    <div class="container">
-        <div class="col-sm-12 col-md-12 col-lg-12 singleblock">
-            <h5>Colorful, Affordable, Tasty, Customizable, Healthy</h5>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="homerewardsblock">
-            <div class="singleblock">
-                <h4>For every 15 bowls, get one FREE!</h4>
-            </div>
-            <div class="singleblock">
-                <div class="button"><a href="rewards.php">REWARDS</a></div>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="container">
-    <div class="wrap">
-
-
-
-      <div class="multiblock col-sm-12 col-md-6 col-lg-6">
-        <h2><a href="index.php">box 2</a></h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-
-      <div class="multiblock col-sm-12 col-md-6 col-lg-6">
-        <h2>box 03</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-
-      <div class="multiblock col-sm-12 col-md-6 col-lg-4">
-        <h2>box 04</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-
-      <div class="multiblock col-sm-12 col-md-6 col-lg-4">
-        <h2>box 05</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-
-      <div class="multiblock col-sm-12 col-md-12 col-lg-4">
-        <h2>box 06</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-
-    </div>
-</div>
 
 
 </main>
