--- a/rewards.html
+++ b/rewards.html
@@ -46,12 +46,22 @@
 <main>
 
     <h1>REWARDS</h1>
-
+    <div class="container">
     <h5>Make every meal count with our free rewards program.<br> After 15 bowls, get a bowl on us! Fill out the form below to get started.</h5>
 
-
-
-
+    <div class="signup">
+      <h6>First and Last Name:</h6>
+      <label for="name"></label> <input type="text" name="name" size="40" style="height: 40px;"><br/>
+      <h6>E-mail:</h6>
+    	<label for="email"></label> <input type="text" name="email" size="40" style="height:40px;"><br/>
+      <h6>Phone Number</h6>
+      <label for="number"></label> <input type="text" name="number" size="40" style="height:40px;"><br/>
+    </div>
+<br>
+    <input type="checkbox" id="scales" name="scales"><label for="scales" style="font-size: 12px;">I want emails on promo and specials! No third party emails :)</label>
+    <br><br>
+    <input type="submit" name="submitThis" value="Submit">
+    </div>
 </main>
 
 <?php include('includes/footer.php'); ?>
