--- a/rewards.html
+++ b/rewards.html
@@ -49,6 +49,7 @@
     <div class="container">
     <h5>Make every meal count with our free rewards program.<br> After 15 bowls, get a bowl on us! Fill out the form below to get started.</h5>
 
+<form action="rewards_post.php" method="post">
     <div class="signup">
       <h6>First and Last Name:</h6>
       <label for="name"></label> <input type="text" name="name" size="40" style="height: 40px;"><br/>
@@ -61,6 +62,7 @@
     <input type="checkbox" id="scales" name="scales"><label for="scales" style="font-size: 12px;">I want emails on promo and specials! No third party emails :)</label>
     <br><br>
     <input type="submit" name="submitThis" value="Submit">
+</form>
     </div>
 </main>
 
