--- a/news.html
+++ b/news.html
@@ -48,69 +48,26 @@
     <h1>NEWS</h1>
 
     <div class="container">
-        <div class="homeheaderblock">
-            <div class="multiblock">
-                <div class="button"><a href="index.php">MENU</a></div>
-            </div>
-            <div class="multiblock">
-                <div class="button"><a href="index.php">ORDER</a></div>
-            </div>
-        </div>
+      <h3>Where to Find Dallas' Best Poke Bowls</h3>
+      <p>Eater Dallas</p>
+      <a href="https://dallas.eater.com/maps/best-poke-bowls-dallas-poke-burritos" target="_blank"><img src="images/logo1.jpg" alt="Eater Dallas article"></a>
+        <br><br>
+      <h3>Like Sushi in a Bowl, But Better: Poke Spreads Around DFW</h3>
+      <p>Dallas Observer</p>
+      <a href="https://www.dallasobserver.com/restaurants/like-sushi-in-a-bowl-but-better-poke-spreads-around-dfw-8412486" target="_blank"><img src="images/logo2.jpg" alt="Dallas Observer article"></a>
+        <br><br>
+      <h3>City Guide: Ahi Poke Bowl</h3>
+      <p>Fort Worth Culture Map</p>
+      <a href="https://fortworth.culturemap.com/guide/restaurants/ahi-poke-bowl/" target="_blank"><img src="images/logo3.jpg" alt="Fort Worth article"></a>
+        <br><br>
+      <h3>Dallas Travel Guide: Ahi Poke Bowl</h3>
+      <p>10Best | A Division of USA Today</p>
+      <a href="https://www.10best.com/destinations/texas/dallas/arlington/restaurants/ahi-poke-bowl/" target="_blank"><img src="images/logo4.jpg" alt="Dallas Travel Guide article"></a>
+
+
+
     </div>
 
-
-    <h2>FRESH C.A.T.C.H.</h2>
-
-    <div class="container">
-        <div class="col-sm-12 col-md-12 col-lg-12 singleblock">
-            <h5>Colorful, Affordable, Tasty, Customizable, Healthy</h5>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="homerewardsblock">
-            <div class="singleblock">
-                <h4>For every 15 bowls, get one FREE!</h4>
-            </div>
-            <div class="singleblock">
-                <div class="button"><a href="rewards.php">REWARDS</a></div>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="container">
-    <div class="wrap">
-
-
-
-      <div class="multiblock col-sm-12 col-md-6 col-lg-6">
-        <h2><a href="index.php">box 2</a></h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-
-      <div class="multiblock col-sm-12 col-md-6 col-lg-6">
-        <h2>box 03</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-
-      <div class="multiblock col-sm-12 col-md-6 col-lg-4">
-        <h2>box 04</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-
-      <div class="multiblock col-sm-12 col-md-6 col-lg-4">
-        <h2>box 05</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-
-      <div class="multiblock col-sm-12 col-md-12 col-lg-4">
-        <h2>box 06</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-
-    </div>
-</div>
 
 
 </main>
