--- a/rewards.html
+++ b/rewards.html
@@ -55,7 +55,7 @@
       <label for="name"></label> <input type="text" name="name" size="40" style="height: 40px;"><br/>
       <h6>E-mail:</h6>
     	<label for="email"></label> <input type="text" name="email" size="40" style="height:40px;"><br/>
-      <h6>Phone Number</h6>
+      <h6>Phone Number:</h6>
       <label for="number"></label> <input type="text" name="number" size="40" style="height:40px;"><br/>
     </div>
 <br>
