--- a/news.html
+++ b/news.html
@@ -48,25 +48,27 @@
     <h1>NEWS</h1>
 
     <div class="container">
-      <h3>Where to Find Dallas' Best Poke Bowls</h3>
-      <p>Eater Dallas</p>
-      <a href="https://dallas.eater.com/maps/best-poke-bowls-dallas-poke-burritos" target="_blank"><img src="images/logo1.jpg" alt="Eater Dallas article"></a>
-        <br><br>
-      <h3>Like Sushi in a Bowl, But Better: Poke Spreads Around DFW</h3>
-      <p>Dallas Observer</p>
-      <a href="https://www.dallasobserver.com/restaurants/like-sushi-in-a-bowl-but-better-poke-spreads-around-dfw-8412486" target="_blank"><img src="images/logo2.jpg" alt="Dallas Observer article"></a>
-        <br><br>
-      <h3>City Guide: Ahi Poke Bowl</h3>
-      <p>Fort Worth Culture Map</p>
-      <a href="https://fortworth.culturemap.com/guide/restaurants/ahi-poke-bowl/" target="_blank"><img src="images/logo3.jpg" alt="Fort Worth article"></a>
-        <br><br>
-      <h3>Dallas Travel Guide: Ahi Poke Bowl</h3>
-      <p>10Best | A Division of USA Today</p>
-      <a href="https://www.10best.com/destinations/texas/dallas/arlington/restaurants/ahi-poke-bowl/" target="_blank"><img src="images/logo4.jpg" alt="Dallas Travel Guide article"></a>
+        <div class="singleblock">
+          <h3>Where to Find Dallas' Best Poke Bowls</h3>
+          <p>Eater Dallas</p>
+          <a href="https://dallas.eater.com/maps/best-poke-bowls-dallas-poke-burritos" target="_blank"><img src="images/logo1.jpg" alt="Eater Dallas article"></a>
+        </div><br><br>
+        <div class="singleblock">
+            <h3>Like Sushi in a Bowl, But Better: Poke Spreads Around DFW</h3>
+            <p>Dallas Observer</p>
+            <a href="https://www.dallasobserver.com/restaurants/like-sushi-in-a-bowl-but-better-poke-spreads-around-dfw-8412486" target="_blank"><img src="images/logo2.jpg" alt="Dallas Observer article"></a>
+        </div><br><br>
+        <div class="singleblock">
+            <h3>City Guide: Ahi Poke Bowl</h3>
+            <p>Fort Worth Culture Map</p>
+            <a href="https://fortworth.culturemap.com/guide/restaurants/ahi-poke-bowl/" target="_blank"><img src="images/logo3.jpg" alt="Fort Worth article"></a>
+        </div><br><br>
+        <div class="singleblock">
+        <h3>Dallas Travel Guide: Ahi Poke Bowl</h3>
+            <p>10Best | A Division of USA Today</p>
+            <a href="https://www.10best.com/destinations/texas/dallas/arlington/restaurants/ahi-poke-bowl/" target="_blank"><img src="images/logo4.jpg" alt="Dallas Travel Guide article"></a>
+        </div>
 
-
-
-    </div>
 
 
 
