--- a/rewards.html
+++ b/rewards.html
@@ -49,6 +49,9 @@
     <div class="container">
     <h5>Make every meal count with our free rewards program.<br> After 15 bowls, get a bowl on us! Fill out the form below to get started.</h5>
 
+<img src="images/rewardsbanner.jpg" style="width: 100%">
+
+<div class="formdiv" style="text-align: center">
 <form action="rewards_post.php" method="post">
     <div class="signup">
       <h6>First and Last Name:</h6>
@@ -63,6 +66,7 @@
     <br><br>
     <input type="submit" name="submitThis" value="Submit">
 </form>
+  </div>
     </div>
 </main>
 
